# ferrum-browser

./: .gitignore  Cargo.toml  LICENSE  README.md  tauri.conf.json
docs/: architecture.md  build.md  production.md
frontend/: index.html  package.json  service-worker.js  vite.config.js
frontend/src/: App.svelte
src/: main.rs
